# V1SmartGlassG2

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
even-hub/: README.md
even-hub/v1smartglass/: app.json  index.html  package.json  tsconfig.json  vite-plugin.ts  vite.config.ts
even-hub/v1smartglass/src/: formatter.ts  glasses.ts  main.ts  styles.css  vision-one.ts
src/v1smartglass/: __init__.py  app.py  asr.py  cli.py  config.py  formatter.py  glasses.py  llm.py  news.py  vision_one.py  voice.py
tests/: test_app.py  test_asr.py  test_formatter.py  test_llm.py  test_news.py  test_vision_one.py  test_voice.py
